synaptic (0.63.1) UNRELEASEDunstable; urgency=low

  * po/pt_BR.po:
    - Updated pt_BR.po, thanks to Sergio Cipolla (closes: #561853)
  * po/sk.po:
    - Updated sk.po, thanks to helix84 (closes: #559283)
  * common/rpackageview.{cc,h}:
    - remember search history accross package transactions

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Dec 2009 10:22:56 +0100

synaptic (0.63) unstable; urgency=low

  * common/rpackage.h:
    - fix segfault with latest apt
  * common/sections_trans.cc:
    - fix typo in gnu-r section description
  * po/fr.po:
    - updated, thanks to Stéphane Blondon, closes: #543981
  * po/sl.po:
    - updated, thanks to Matej Urbančič
  * take the "Origin" field from the release file into account
    when looking for supported packages
  * gtk/rgfetchprogress.{cc,h}:
    - remove the custom progress rendering and replace with
      stock gtk progress
  * gtk/glade/dialog_conffile.glade:
    - make the conffile dialog resizable (LP: #228928)
  * gtk/rgdebinstallprogress.cc:
    - use fixed size font on conffile changes

 -- Michael Vogt <mvo@debian.org>  Wed, 21 Oct 2009 11:19:56 +0200

synaptic (0.62.8) unstable; urgency=low

  * debian/control:
    - add build-conflict against librpm-dev
    - recommends gksu|kdebase-bin (kdsu is fine too) 
      closes: #442421
  * add filter for manual installed packages (LP: #122047)
  * fix typo (thanks to Florentin Duneau), closes: #542122
  * po/pt_BR.po:
    - updated translation, thanks to Sergio Cipolla 
      (closes: #532473)

 -- Michael Vogt <mvo@debian.org>  Thu, 27 Aug 2009 10:00:10 +0200

synaptic (0.62.7) unstable; urgency=low

  * show progress when searching and not not block the UI
    (LP: #24188)
  * gtk/glade/dialog_authentication.glade:
    - add two missing "translatable" entries, thanks to 
      Daniele Forsi)
  * po/sk.po:
    - updated translation, thanks to helix84, closes: #532790 
  * po/it.po:
    - updated translation, thanks to Milo Casagrande, closes: #534351