@@ -6,6 +6,7 @@ synaptic (0.63.1) UNRELEASEDunstable; urgency=low
     - Updated sk.po, thanks to helix84 (closes: #559283)
   * common/rpackageview.{cc,h}:
     - remember search history accross package transactions
+  * make the origin filter more fine grained
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Dec 2009 10:22:56 +0100
 
